# kids_demo

./: .env_sample  ANSWERS.md  README.md  pyproject.toml
src/: main.py
src/agent/: connector.py
src/prompts/: SYSTEM_PROMPT.md
