[project]
name = "kids-demo"
version = "0.1.0"
description = "Demo for Onoo AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.10",
    "langchain-google-genai>=4.2.5",
    "ruff>=0.15.18",
    "typer>=0.26.7",
]

[project.scripts]
kids-demo = "src.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
